@@ -25,6 +25,9 @@ Fixed bugs:
 * ant.bat now supports the ANT_ARGS environment variable again (like
   Ant 1.5 did).
 
+* The "plain" <junit> <formatter> could throw a NullPointerException
+  if an error occured in setUp.
+
 Other changes:
 --------------
 
